# llmground

./: Makefile  README.md  pyproject.toml
agents/: agent_tools.py  test_weather_agent.py  weather_agent.py
agents/tools/: test_weather_tools.py  weather_tools.py
app/: server.py
chains/: test_weather_assistant.py  weather_assistant.py
docker/: Dockerfile
llms/: ollama_llms.py  test_ollama_llms.py
scripts/: run.sh
services/: server.py
